[Bug #164927648] Remove extra white space"
Remove extra white space

--- a/UI/assets/css/pagestyle.css
+++ b/UI/assets/css/pagestyle.css
@@ -17,7 +17,7 @@
   --limeColor: lime;
 }
 html, body{
-  width: 100%;
+  width: 100vw;
   margin: 0;
   overflow-x: hidden;
 }
